// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PureChildComponentReducers should change state appropriately when receiving SAMPLE_CHILD_COMPONENT_SUBMIT 1`] = `
Object {
  "passedText": "TEST TEXT",
}
`;

exports[`PureChildComponentReducers should return initial state 1`] = `
Object {
  "passedText": "initial text",
}
`;
